Blockbase: Fix alignmemts in the Query Pagination block

--- a/blockbase/assets/ponyfill.css
+++ b/blockbase/assets/ponyfill.css
@@ -629,7 +629,7 @@ p.has-background {
 	color: var(--wp--custom--color--background);
 }
 
-.wp-block-query-pagination {
+div.wp-block-query-pagination {
 	padding-top: 1.5em;
 	justify-content: space-between;
 	display: grid;
@@ -638,33 +638,33 @@ p.has-background {
 }
 
 @media (max-width: 599px) {
-	.wp-block-query-pagination {
+	div.wp-block-query-pagination {
 		grid-template-areas: "prev next";
 		grid-template-columns: 1fr 1fr;
 	}
 }
 
-.wp-block-query-pagination .wp-block-query-pagination-previous {
+div.wp-block-query-pagination .wp-block-query-pagination-previous {
 	justify-self: start;
 	grid-area: prev;
 }
 
-.wp-block-query-pagination .wp-block-query-pagination-next {
+div.wp-block-query-pagination .wp-block-query-pagination-next {
 	justify-self: end;
 	grid-area: next;
 }
 
-.wp-block-query-pagination .wp-block-query-pagination-numbers {
+div.wp-block-query-pagination .wp-block-query-pagination-numbers {
 	grid-area: numbers;
 	justify-self: center;
 }
 
-.wp-block-query-pagination .wp-block-query-pagination-numbers .current {
+div.wp-block-query-pagination .wp-block-query-pagination-numbers .current {
 	text-decoration: underline;
 }
 
 @media (max-width: 599px) {
-	.wp-block-query-pagination .wp-block-query-pagination-numbers {
+	div.wp-block-query-pagination .wp-block-query-pagination-numbers {
 		display: none;
 	}
 }
