--- a/blockbase/sass/blocks/_query-pagination.scss
+++ b/blockbase/sass/blocks/_query-pagination.scss
@@ -1,4 +1,4 @@
-.wp-block-query-pagination {
+div.wp-block-query-pagination { // This CSS needs to be stronger than Gutenberg's until https://github.com/WordPress/gutenberg/issues/34997 is merged.
 	padding-top: 1.5em;
 	justify-content: space-between;
 	display: grid;
@@ -19,7 +19,7 @@
 		justify-self: end;
 		grid-area: next;
 	}
-	
+
 	.wp-block-query-pagination-numbers{
 		grid-area: numbers;
 		justify-self: center;
